Spark 2.x support